--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   
   <title>Product preview card component</title>
 
-  <link href="/Style/Stylesheet.css" rel="Stylesheet">
+  <link href="Style/Stylesheet.css" rel="Stylesheet">
 </head>
 <body>
 <main class="mainContainer">
   <div class="imgContainer">
-    <img src="/images/image-product-desktop.jpg" class="perfumeImage2">
-    <img src="/images/image-product-mobile.jpg" class="perfumeImage">
+    <img src="images/image-product-desktop.jpg" class="perfumeImage2">
+    <img src="images/image-product-mobile.jpg" class="perfumeImage">
   </div>
   <div text-container>
   <h2 class="perfumeTitle">
@@ -38,7 +38,7 @@
 </footer>
 <div class="cartButton">
   <button class="Carty">
-     <img src="/images/icon-cart.svg" class="CartImg"> Add to Cart 
+     <img src="images/icon-cart.svg" class="CartImg"> Add to Cart 
   </button>
 </div>
 </div>
